# montecarlo_stock_prices

./: .gitignore  LICENSE  README.md  app.py  pyproject.toml  requirements.txt
montecarlo_simulation/: main.py
montecarlo_simulation/core/: montecarlo.py
src/core/: brownian_motion.py  data.py  estadisticos.py
src/main/: main.py
src/montecarlo_simulation/core/: graficos.py
src/ui/: app.py
